@@ -1,3 +1,8 @@
+2003-04-10  Dani Carbonell  <bocata@panete.net>
+
+	* src/partyline.c (partyline_page_new): Removed a unused variable.
+	Fixed #110447.
+
 2003-04-10  Jordi Mallach  <jordi@sindominio.net>
 
 	* configure.in: removed call to AM_GNU_GETTEXT.
